# scipro-flet

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/: action_buttons.py  id.py  json_upload.py  main.py
