[project]
name = "scipro-flet"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Karl Kirschner", email = "38645898+karlkirschner@users.noreply.github.com" },
    { name = "Emre Çetin", email = "20030146+EmKaCe@users.noreply.github.com" }
]
dependencies = [
  "flet==0.27.6"
]

# Poetry configuration
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}
taskipy = "^1.14.1"
black = "^25.1.0"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

# Black configuration
[tool.black]
line-length = 90
target-version = ["py312", "py313"]
include = ".py$"
exclude = """
    (
        build
        |dist
        |.eggs
        |.git
        |__pycache__
        |.pytest_cache
        |.mypy_cache
        |.venv
        |.vscode
        |.idea
    )
"""

# Flet configuration
[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "scipro-flet"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"  

# Taskipy configuration
[tool.taskipy.tasks]
dev = "flet run --web -d -r main.py"
build = "flet build web"